--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,12 @@
 }
 
 #main-doc {
-    position: relative;
-    float: right;
-    width: 75%;
-  }
-
-  @media only screen and (max-width: 815px) {
+  position: relative;
+  float: right;
+  width: 75%;
+}
+/*Media query and responsiveness */
+@media only screen and (max-width: 815px) {
   #navbar {
     background-color: #fff;
     position: absolute;
@@ -24,13 +24,11 @@
     border: none;
     z-index: 1;
     border-bottom: 2px solid;
-
-
   }
   #main-doc {
     width: 100%;
     position: relative;
     margin-left: 0px;
     margin-top: 270px;
-    
   }
+}
