--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,36 @@
-html body {
+html,
+body {
+  min-width: 290px;
+  color: #4d4e53;
+  background-color: #ffffff;
   font-family: "Open Sans", Arial, sans-serif;
   line-height: 1.5;
 }
 
 #navbar {
-  cursor: pointer;
   position: fixed;
   min-width: 290px;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   width: 300px;
   height: 100%;
   border-right: solid;
   border-color: rgba(0, 22, 22, 0.4);
 }
 
-nav > header {
-  text-align: center;
-  font-size: 22px;
+header {
+  color: black;
   margin: 10px;
+  text-align: center;
+  font-size: 1.8em;
+  font-weight: thin;
+}
+
+#main-doc h2 {
+  text-align: left;
+  margin: 0px;
+  font-size: 24px;
+  font-weight: 200;
 }
 
 #navbar ul {
@@ -29,37 +41,38 @@ nav > header {
 }
 
 #navbar li {
-  color: #4d4e53;
-  border-top: 1px solid;
+  border-top: 1px black solid;
   list-style: none;
   position: relative;
   width: 100%;
-  padding: 10px 20px;
 }
 
 #navbar a {
+  display: block;
+  padding: 10px 30px;
   color: #4d4e53;
-}
-
-nav ul li a {
   text-decoration: none;
-  color: black;
+  cursor: pointer;
 }
 
-h2 {
-  font-weight: lighter;
-  text-align: left;
-  font-size: 22px;
+#main-doc {
+  position: absolute;
+  margin-left: 310px;
+  padding: 20px;
+  margin-bottom: 110px;
 }
 
-p,
-code,
-ul {
+section p {
   color: #4d4e53;
+  margin: 15px;
+  font-size: 0.96em;
+}
+
+section li {
+  margin: 15px 0px 0px 20px;
 }
 
 code {
-  font-family: monospace;
   display: block;
   text-align: left;
   white-space: pre-line;
@@ -73,44 +86,15 @@ code {
   border-radius: 5px;
 }
 
-section li {
-  text-align: -webkit-match-parent;
-  margin: 15px 0px 0px 20px;
-}
-
-/*
-a:link {
-  text-decoration: none;
-  color: black;
-}
-
-a:visited {
-  text-decoration: none;
-  color: black;
-}
-
-a:hover {
-  text-decoration: none;
-  color: black;
-}
-
-a:active {
-  text-decoration: none;
-  color: black;
-}
-*/
-
-#main-doc {
-  position: relative;
-  float: right;
-  width: 75%;
-  top: 10px;
-}
-
-/*Media query and responsiveness */
 @media only screen and (max-width: 815px) {
+  /* For mobile phones: */
+  #navbar ul {
+    border: 1px solid;
+    height: 207px;
+  }
+
   #navbar {
-    background-color: #fff;
+    background-color: white;
     position: absolute;
     top: 0;
     padding: 0;
@@ -121,10 +105,25 @@ a:active {
     z-index: 1;
     border-bottom: 2px solid;
   }
+
   #main-doc {
-    width: 100%;
     position: relative;
     margin-left: 0px;
     margin-top: 270px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  #main-doc {
+    margin-left: -10px;
+  }
+
+  code {
+    margin-left: -20px;
+    width: 100%;
+    padding: 15px;
+    padding-left: 10px;
+    padding-right: 45px;
+    min-width: 233px;
   }
 }
