--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ code {
     margin-top: 270px;
   }
 }
-
+/*
 @media only screen and (max-width: 400px) {
   #main-doc {
     margin-left: -10px;
